Refactor index.html with semantic HTML elements
Reorganized HTML structure and added semantic elements.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Coffee Blog</title>
-<h1>Coffee Blog</h1>
-<h2>Coffee Blog with the Tips and Courses</h2>
-<p>Learn from the experts with the best recipies and tips</p>
-<header>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, adipisci ut debitis quaerat eius rerum nulla quam culpa,quis repellat dolorem voluptas tempora laudantium optio numquam voluptatibus? Quidem, in nulla!</header>
-<div></div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coffee Blog</title>
+    </head>
+<body>
+    <header>
+        <h1>Coffee Blog</h1>
+        <h2>Coffee Blog with the Tips and Courses</h2>
+        <p>Learn from the experts with the best recipes and tips</p>
+    </header>
 
-<div></div>
-<h3>3 Delicious Coffee Recipes</h3>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum odio dicta, sed eligendi officia aut modi laboriosam molestias quia laborum optio tempora totam nostrum ab. Asperiores magni voluptatibus rerum facere.
-<div>
+    <main>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, adipisci ut debitis quaerat eius rerum nulla quam culpa, quis repellat dolorem voluptas tempora laudantium optio numquam voluptatibus? Quidem, in nulla!</p>
+        </section>
 
+        <article>
+            <img src="img/blog1.jpg" alt="Barista tamping ground coffee into a portafilter at a wooden counter, espresso machine and cups in the background, warm inviting cafe atmosphere, no visible text">
+            <div>
+                <h3>3 Delicious Coffee Recipes</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum odio dicta, sed eligendi officia aut modi laboriosam molestias quia laborum optio tempora totam nostrum ab. Asperiores magni voluptatibus rerum facere.</p>
+            </div>
+        </article>
 
-</div>
-<h3>Coffee Benefits</h3>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis iste temporibus nulla tempore nemo magni eum quos voluptate itaque? Unde suscipit modi ea vitae reiciendis sint. Quasi nostrum porro vero!</p>
-<div>
+        <article>
+            <div>
+                <h3>Coffee Benefits</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis iste temporibus nulla tempore nemo magni eum quos voluptate itaque? Unde suscipit modi ea vitae reiciendis sint. Quasi nostrum porro vero!</p>
+            </div>
+        </article>
+        
+    </main>
 
-</div>
-<footer>
-   <h2>CoffeeBlog</h2> 
-</footer>
+    <footer>
+        <h2>CoffeeBlog</h2>
+    </footer>
+</body>
+</html>
